--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -82,6 +82,9 @@
 
     @media screen and (min-width: $desktop-width) {
       margin: 0;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.02em;
       &:not(:last-child) {
         margin-right: 30px;
       }
