--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -21,6 +21,10 @@
     text-align: center;
     margin-bottom: 50px;
   }
+
+  @media screen and (min-width: $desktop-width) {
+    justify-content: center;
+  }
 }
 
 .filters-item {
@@ -75,6 +79,10 @@
     display: flex;
     flex-wrap: wrap;
   }
+
+  @media screen and (min-width: $desktop-width) {
+    margin: -15px;
+  }
 }
 
 .projects-items {
@@ -82,6 +90,10 @@
 
   &:not(:last-child) {
     margin-bottom: 30px;
+
+    @media screen and (min-width: $desktop-width) {
+      margin-bottom: 15px;
+    }
   }
 }
 
