--- a/sass/components/_specifications.scss
+++ b/sass/components/_specifications.scss
@@ -59,6 +59,10 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+
+  @media screen and (min-width: $desktop-width) {
+    text-align: start;
+  }
 }
 
 .specifications-text {
