--- a/css/main.css
+++ b/css/main.css
@@ -1704,6 +1704,7 @@ footer .social-link:hover, footer .social-link:focus {
   width: 100%;
   height: 100%;
   background-color: #ffffff;
+  overflow-y: scroll;
 }
 
 .menu-header.backdrop--hidden {
