--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -36,6 +36,7 @@
   position: absolute;
   top: 10px;
   right: 15px;
+  cursor: pointer;
 
   &:hover,
   &:focus {
@@ -50,6 +51,7 @@
   border: none;
   background-color: transparent;
   fill: currentColor;
+  cursor: pointer;
 
   &:hover,
   &:focus {
