--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -21,14 +21,11 @@
   @media screen and (min-width: $tablet-width) {
     display: flex;
     flex-wrap: nowrap;
+    justify-content: center;
     margin: 0;
     padding: 0;
     text-align: center;
     margin-bottom: 50px;
-  }
-
-  @media screen and (min-width: $desktop-width) {
-    justify-content: center;
   }
 }
 
@@ -85,10 +82,6 @@
     flex-wrap: wrap;
     justify-content: center;
   }
-
-  @media screen and (min-width: $desktop-width) {
-    margin: -15px;
-  }
 }
 
 .projects-items {
@@ -105,6 +98,10 @@
   @media screen and (min-width: $tablet-width) {
     margin: 15px;
     flex-basis: calc((100% - 4 * 15px) / 2);
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    flex-basis: calc((100% - 6 * 15px) / 3);
   }
 }
 
