--- a/sass/components/_menu-backdrop.scss
+++ b/sass/components/_menu-backdrop.scss
@@ -1,20 +1,22 @@
 .menu-header {
-  position: fixed;
   display: none;
-  z-index: 10;
+  position: absolute;
 
   top: 0;
   left: 0;
   width: 100%;
+  min-height: 100vh;
   height: 100%;
+  padding: 48px 40px;
   background-color: $WhiteBgColor;
 
   overflow-y: scroll;
+  z-index: 3;
 
   &.backdrop--hidden {
-    display: block;
-
-    padding: 48px 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
 
@@ -29,10 +31,6 @@
 
   &:not(:last-child) {
     margin-bottom: 30px;
-  }
-
-  &:last-child {
-    margin-bottom: 302px;
   }
 }
 
@@ -79,10 +77,19 @@
   }
 }
 
+.menu-contacts {
+  padding: 0;
+  margin: 0;
+}
+
 .menu-social {
   display: flex;
   padding: 0;
   margin: 0;
+
+  @media screen and (max-width: 400px) {
+    flex-wrap: wrap;
+  }
 }
 
 .social-page {
